--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,26 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 configure_file(version.h.in version.h)
 
+add_library(yamr_file_splitter
+        file_splitter/file_splitter.cpp
+        )
+
+add_library(yamr_mapper
+        mapper/mapper.cpp
+        )
+target_link_libraries(yamr_mapper -lpthread)
+
+add_library(yamr_reducer
+        reducer/reducer.cpp
+        )
+target_link_libraries(yamr_reducer -lpthread)
+
 add_executable(yamr
         main.cpp
         )
-target_link_libraries(yamr -lpthread)
+target_link_libraries(yamr yamr_file_splitter yamr_mapper yamr_reducer)
 
-set_target_properties(yamr PROPERTIES
+set_target_properties(yamr yamr_file_splitter yamr_mapper yamr_reducer PROPERTIES
         CXX_STANDARD 14
         CXX_STANDARD_REQUIRED ON
         COMPILE_OPTIONS -Wpedantic -Wall -Wextra
